Fixed account bg

--- a/public/profile/account/index.html
+++ b/public/profile/account/index.html
@@ -14,12 +14,13 @@
 
 </head>
 
-<body class="bg-dark">
+<body class="bg-dark mailbox">
 
 <div class="nav-placeholder"></div>
+<div class="mailbox"></div>
 <div class="section container main text-white">
     <div class="row">
-        <div class="col-12 col-lg mt-5">
+        <div class="col-12 col-sm-6 mt-5">
             <h2 class="font-weight-bold text-secondary my-5">About you</h2>
             <div class="container mt-4" style="font-size: 16px;">
                 <div class="row">
@@ -47,7 +48,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-12 col-lg mt-5">
+        <div class="col-12 col-sm-6 mt-5">
             <h2 class="font-weight-bold text-secondary my-5">Your addresses</h2>
                 <div class="container">
                      <div class="card address-card bg-dark mb-3 border border-secondary text-white" style="font-size: 16px; max-width: 18rem; border-width: 2px !important;">
@@ -63,16 +64,12 @@
                 </div>
             </div>
     </div>
-        <div class="col-12 col-md-4 mt-5">
-             <img class="pl-md-0" src="/assets/images/account_mailbox.svg" alt="mailbox" >
-        </div>
 </div>
 
 <script src="/jquery/dist/jquery.js"></script>
 <script src="/bootstrap/dist/js/bootstrap.js"></script>
 <script src="/components/navbar/navbar.js" type="module"></script>
 <script src="/js/index/index.js" type="module"></script>
-<script src="/js/components/carousel.js" type="module"></script>
 
 
 </body>
