--- a/public/profile/newaddress/index.html
+++ b/public/profile/newaddress/index.html
@@ -46,7 +46,7 @@
                 <form class="needs-validation form-secondary" novalidate>
                     <div class="container p-3">
                         <div class="form-row justify-content-end">
-                            <img class="py-4" src="/assets/icon/stamp.svg" alt="stamp">
+                        <img class="py-4" src="/assets/images/stamp.svg" alt="stamp">
                         </div>
                         <div class="form-row">
                             <div class="form-group col-12 col-md-5 mr-auto">
