Working on loading addresses

--- a/public/profile/account/index.html
+++ b/public/profile/account/index.html
@@ -48,19 +48,11 @@
                 </div>
             </div>
         </div>
-        <div class="col-12 col-sm-6 mt-5">
+        <div class="col-12 col-sm-6 mt-5 float-right ">
             <h2 class="font-weight-bold text-secondary my-5">Your addresses</h2>
-                <div class="container">
-                     <div class="card address-card bg-dark mb-3 border border-secondary text-white" style="font-size: 16px; max-width: 18rem; border-width: 2px !important;">
-                        <div class="card-header">Name Surname</div>
-                        <div class="card-body">
-                            <label class="col-form-label-md" id="addressLine1">Address line 1</label>
-                            <label class="col-form-label-md" id="addressLine2">Address line 2</label>
-                            <label class="col-form-label-md" id="inputPostalCode">Postal Code</label>
-                            <label class="col-form-label-md" id="inputCity">City</label>
-                            <label class="col-form-label-md" id="inputCountry">Country</label>
-                        </div>
-                    </div>
+                <div class="container address">
+                     
+                    <a href="address/new/" class="btn float-right text-secondary p-0"><i class="fa fa-plus-circle fa-2x"></i></a>
                 </div>
             </div>
     </div>
