Add fetch query for address

--- a/public/profile/account/index.html
+++ b/public/profile/account/index.html
@@ -62,6 +62,7 @@
 <script src="/bootstrap/dist/js/bootstrap.js"></script>
 <script src="/components/navbar/navbar.js" type="module"></script>
 <script src="/js/index/index.js" type="module"></script>
+<script src="/profile/account/address/address.js" type="module"></script>
 
 
 </body>
