Addresses are now loaded automatically.

--- a/public/profile/account/index.html
+++ b/public/profile/account/index.html
@@ -50,12 +50,13 @@
         </div>
         <div class="col-12 col-sm-6 mt-5 float-right ">
             <h2 class="font-weight-bold text-secondary my-5">Your addresses</h2>
-                <div class="container address">
-                     
+                <div class="container">
+                     <div id="address-container"></div>
                     <a href="address/new/" class="btn float-right text-secondary p-0"><i class="fa fa-plus-circle fa-2x"></i></a>
                 </div>
             </div>
     </div>
+
 </div>
 
 <script src="/jquery/dist/jquery.js"></script>
