Working on book page + new loader, carousel, general libs & lots more

--- a/public/dev/luna.html
+++ b/public/dev/luna.html
@@ -7,8 +7,8 @@
     <title>Starter Template for Bootstrap</title>
 
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="/scss/bobooky.css">
-    <link rel="stylesheet" href="/scss/components/carousel.css">
+    <link rel="stylesheet" href="/lib/scss/bobooky.css">
+    <link rel="stylesheet" href="/components/carousel/carousel.css">
 
     <style>
         .book {
