--- a/public/index.html
+++ b/public/index.html
@@ -7,16 +7,18 @@
     <title>Starter Template for Bootstrap</title>
 
     <!--Font temporary experiments -->
-    <link href="https://fonts.googleapis.com/css?family=Raleway|Paytone+One|Catamaran|Merriweather+Sans:300,400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway|Paytone+One|Catamaran|Merriweather+Sans:300,400&display=swap"
+          rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Muli|Nunito:700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Lato|Roboto|Open+Sans:400,700,800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato|Roboto|Open+Sans:400,700,800&display=swap"
+          rel="stylesheet">
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="/scss/bobooky-theme.css">
+    <link rel="stylesheet" href="/lib/scss/bobooky-theme.css">
     <link rel="stylesheet" href="/assets/font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="/components/navbar/navbar.css">
-    <link rel="stylesheet" href="/scss/index/index.css">
-    <link rel="stylesheet" href="/scss/components/carousel.css">
+    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="/components/carousel/carousel.css">
 </head>
 
 <body>
@@ -29,7 +31,8 @@
                 <h3>What are you looking for?</h3>
                 <div class=" form-group border-white mt-3 search-bar">
                     <div class="input-group input-group-lg">
-                        <input type="text" class="form-control pl-4 text-light" placeholder="Search more than 700 books">
+                        <input type="text" class="form-control pl-4 text-light"
+                               placeholder="Search more than 700 books">
                         <div class="input-group-append">
                             <button class="btn round btn-outline-dark" type="button">
                                 <i class="fa fa-search text-white"></i>
@@ -41,51 +44,27 @@
         </div>
     </div>
     <div class="row align-self-center">
-    <a href="#latest" class="fa fa-chevron-down text-white text-decoration-none"></a>
+        <a href="#latest" class="fa fa-chevron-down text-white text-decoration-none"></a>
     </div>
 </div>
 
-<div class="container col-lg-8 col-md-10 text-dark pb-4 pt-5 mt-5">
+<div class="container text-dark pb-4 pt-5 mt-5">
     <h3 id="latest" class="text-gradient">What's new</h3>
 </div>
-<div class="section d-flex flex-column">
-    <div class="container min-vh-25">
-        <div class="carousel slide multi-item-carousel mx-3" id="books">
-            <div class="carousel-inner row mx-auto">
-                <div class="carousel-item template col-md-3">
-                    <div class="card border-0">
-                         <img class="card-img-top pt-0"
-                             src="https://images.gr-assets.com/books/1356422925l/13450339.jpg"
-                             alt="Card image cap">
-                        <div class="card-body">
-                            <h6 class="text-dark card-title"></h6>
-                            <p class="text-dark card-author"></p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <a class="carousel-control-prev" href="#books" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#books" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
-        </div>
-    </div>
-</div>
 
-<div class="container col-lg-8 col-md-10 text-dark pb-4 pt-5 mt-5">
-    <h3 class="text-gradient float-right">Some of our favourite books</h3>
+
+<div class="container text-dark pb-4 pt-5 mt-5">
+    <h3 class="text-gradientì">Some of our favourite books</h3>
+</div>
+<div class="container whatsnew my-5">
 </div>
 
 
 <script src="/jquery/dist/jquery.js"></script>
 <script src="/bootstrap/dist/js/bootstrap.js"></script>
 <script src="/components/navbar/navbar.js" type="module"></script>
-<script src="/js/index/index.js" type="module"></script>
-<script src="/js/components/carousel.js" type="module"></script>
+<script src="lib/multislider/multislider.js"></script>
+<script src="/index.js" type="module"></script>
 
 
 </body>
