--- a/public/profile/account/address/new/index.html
+++ b/public/profile/account/address/new/index.html
@@ -8,7 +8,7 @@
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="/assets/font-awesome/css/font-awesome.css">
-    <link rel="stylesheet" href="/scss/bobooky-theme.css">
+    <link rel="stylesheet" href="/lib/scss/bobooky-theme.css">
     <link rel="stylesheet" href="/components/navbar/navbar.css">
 
     <style>
