--- a/public/profile/account/index.html
+++ b/public/profile/account/index.html
@@ -8,7 +8,7 @@
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="/assets/font-awesome/css/font-awesome.css">
-    <link rel="stylesheet" href="/scss/bobooky-theme.css">
+    <link rel="stylesheet" href="/lib/scss/bobooky-theme.css">
     <link rel="stylesheet" href="/components/navbar/navbar.css">
     <link rel="stylesheet" href="scss/index.css">
 
@@ -62,7 +62,7 @@
 <script src="/jquery/dist/jquery.js"></script>
 <script src="/bootstrap/dist/js/bootstrap.js"></script>
 <script src="/components/navbar/navbar.js" type="module"></script>
-<script src="/js/index/index.js" type="module"></script>
+<script src="/index.js" type="module"></script>
 <script src="/profile/account/address/address.js" type="module"></script>
 
 
