--- a/public/index.html
+++ b/public/index.html
@@ -4,15 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Starter Template for Bootstrap</title>
+    <title>Homepage</title>
 
-    <!--Font temporary experiments -->
-    <link href="https://fonts.googleapis.com/css?family=Raleway|Paytone+One|Catamaran|Merriweather+Sans:300,400&display=swap"
-          rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Muli|Nunito:700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Lato|Roboto|Open+Sans:400,700,800&display=swap"
-          rel="stylesheet">
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="/lib/scss/bobooky-theme.css">
     <link rel="stylesheet" href="/assets/font-awesome/css/font-awesome.css">
