Working on book page + new loader, carousel, general libs & lots more

--- a/public/book/index.html
+++ b/public/book/index.html
@@ -214,23 +214,38 @@
     </div>
 </div>
 <div class="section related-books mt-5">
-    <svg preserveAspectRatio="none" viewBox="0 0 1793.66 367.45">
+    <svg class="head" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 184.73 368.45">
         <defs>
             <style>.cls-1 {
-                fill: url(#Sfumatura_senza_nome_37);
+                fill: #d4145a;
+                stroke: #d4145a;
+                stroke-miterlimit: 10;
             }</style>
-            <linearGradient id="Sfumatura_senza_nome_37" x1="-12.87" y1="9378.18" x2="1564.35" y2="9378.18"
-                            gradientTransform="matrix(0.64, 0.71, -0.64, 0.71, 6470.04, -6996.18)"
-                            gradientUnits="userSpaceOnUse">
-                <stop offset="0" stop-color="#d6075c"></stop>
-                <stop offset="1" stop-color="#ac2428"></stop>
-            </linearGradient>
         </defs>
-        <title>suggestion_bg</title>
+        <title>testa_suggestion_bg</title>
         <g id="Livello_2" data-name="Livello 2">
             <g id="back">
-                <path class="cls-1"
-                      d="M183.73,0H1793.66a0,0,0,0,1,0,0V367.45a0,0,0,0,1,0,0H183.73A183.73,183.73,0,0,1,0,183.73v0A183.73,183.73,0,0,1,183.73,0Z"></path>
+                <path class="cls-1" d="M184.23,368C82.76,368,.5,285.69.5,184.23h0A183.73,183.73,0,0,1,184.23.5Z"/>
+            </g>
+        </g>
+    </svg>
+    <svg preserveAspectRatio="none" class="tail" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1609.94 367.45">
+        <defs>
+            <style>.cls-1 {
+                fill: url(#Sfumatura_senza_nome_5);
+            }</style>
+            <linearGradient id="Sfumatura_senza_nome_5" x1="311.59" y1="10913.69" x2="1825.43" y2="10913.69"
+                            gradientTransform="matrix(0.64, 0.71, -0.64, 0.71, 7124.72, -8288.96)"
+                            gradientUnits="userSpaceOnUse">
+                <stop offset="0" stop-color="#d5085a"/>
+                <stop offset="0.18" stop-color="#d6075c"/>
+                <stop offset="1" stop-color="#ac2428"/>
+            </linearGradient>
+        </defs>
+        <title>corpo_suggestion_bg</title>
+        <g id="Livello_2" data-name="Livello 2">
+            <g id="back">
+                <rect class="cls-1" width="1609.94" height="367.45"/>
             </g>
         </g>
     </svg>
