--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="/components/navbar/navbar.css">
     <link rel="stylesheet" href="/index.css">
     <link rel="stylesheet" href="/components/carousel/carousel.css">
+    <link rel="stylesheet" href="/components/carousel/items/book.css">
 </head>
 
 <body>
@@ -48,16 +49,17 @@
     </div>
 </div>
 
-<div class="container text-dark pb-4 pt-5 mt-5">
-    <h3 id="latest" class="text-gradient">What's new</h3>
-</div>
-
-
-<div class="container text-dark pb-4 pt-5 mt-5">
-    <h3 class="text-gradientì">Some of our favourite books</h3>
+<div class="container text-dark my-5">
+    <h3>What's new</h3>
 </div>
 <div class="container whatsnew my-5">
 </div>
+<div class="container text-dark my-5">
+    <h3>Some of our favourite books</h3>
+</div>
+<div class="container favourites my-5">
+</div>
+
 
 
 <script src="/jquery/dist/jquery.js"></script>
