Working on book section

--- a/public/book/index.html
+++ b/public/book/index.html
@@ -10,8 +10,7 @@
     <link rel="stylesheet" href="/assets/font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="/components/navbar/navbar.css">
     <link rel="stylesheet" href="book.css">
-    <link rel="stylesheet" href="/components/animated-heart/animated-heart.css">
-    <link rel="stylesheet" href="/components/carousel/carousel.css">
+    <link rel="stylesheet" href="/components/carousel/carousel-three.css">
 
 </head>
 
@@ -229,7 +228,8 @@
             </g>
         </g>
     </svg>
-    <svg preserveAspectRatio="none" class="tail" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1609.94 367.45">
+    <svg preserveAspectRatio="none" class="tail" xmlns="http://www.w3.org/2000/svg"
+         xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1609.94 367.45">
         <defs>
             <style>.cls-1 {
                 fill: url(#Sfumatura_senza_nome_5);
@@ -249,6 +249,19 @@
             </g>
         </g>
     </svg>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-3 d-flex flex-column justify-content-center">
+                <h3 class="text-white">
+                    We think you will also love this
+                </h3>
+            </div>
+            <div class="col-9">
+                <div class="related-container"></div>
+            </div>
+        </div>
+
+    </div>
 </div>
 <div class="section book-reviews d-flex bg-dark vh-100">
     <div class="container text-white">
@@ -286,7 +299,8 @@
 <script src="/jquery/dist/jquery.js"></script>
 <script src="/bootstrap/dist/js/bootstrap.js"></script>
 <script src="/components/navbar/navbar.js" type="module"></script>
-<script src="/components/carousel/carousel.js" type="module"></script>
+<script src="/lib/multislider/multislider.js"></script>
+<script src="book.js" type="module"></script>
 
 
 </body>
