Working on book section

--- a/public/book/index.html
+++ b/public/book/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/assets/font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="/components/navbar/navbar.css">
     <link rel="stylesheet" href="book.css">
-    <link rel="stylesheet" href="/components/carousel/carousel-three.css">
+    <link rel="stylesheet" href="/components/carousel/common.css">
 
 </head>
 
@@ -251,13 +251,13 @@
     </svg>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-3 d-flex flex-column justify-content-center">
+            <div class="col-12 col-lg-3 d-flex flex-column justify-content-center">
                 <h3 class="text-white">
                     We think you will also love this
                 </h3>
             </div>
-            <div class="col-9">
-                <div class="related-container"></div>
+            <div class="col-12 col-lg-9">
+                <div class="related-container mt-4 mt-lg-0"></div>
             </div>
         </div>
 
